--- a/SendMe/Views/Home/Index.cshtml
+++ b/SendMe/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
 ﻿@{
     ViewBag.Title = "Home";
 }
-
-<img class="landing-img" src="~/Img/SendMe Banner.png" />
-
-<div class="col-sm-12" style="text-align:center">
-    <a href="~/school/1" type="button" class="btn btn-primary">Find Your School</a>
+<div class="row">
+    <img class="landing-img" src="~/Img/uscmed.png" />
+</div>
+<div class="row">
+    <div class="col-sm-12" style="text-align:center">
+        <a href="~/school/1" type="button" class="btn btn-primary">Find a Student</a>
+    </div>
 </div>
