--- a/SendMe/Views/Shared/_Layout.cshtml
+++ b/SendMe/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - SendMe!</title>
+    <title>@ViewBag.Title - USCMed</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script src="https://use.fontawesome.com/eb5762e410.js"></script>
@@ -23,14 +23,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <img class="logo-nav" src="~/Img/SendMeLogoTxt.png" />
+                <a href="@Url.Action("Index", "Home")">
+                    <img class="logo-nav" src="~/Img/uscmed-wht-logo.png" />
+                </a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-default">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li><a href="~/school/1">Find Your School</a></li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li><a href="~/school/1">Find a Student</a></li>                    
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
