--- a/SendMe/Views/Home/Index.cshtml
+++ b/SendMe/Views/Home/Index.cshtml
@@ -1,11 +1,13 @@
 ﻿@{
     ViewBag.Title = "Home";
 }
-<div class="row">
-    <img class="landing-img" src="~/Img/uscmed.png" />
-</div>
-<div class="row">
-    <div class="col-sm-12" style="text-align:center">
-        <a href="~/school/1" type="button" class="btn btn-primary">Find a Student</a>
-    </div>
+
+<div class="home">
+
+        <img class="landing-img" src="~/Img/uscmed.png" />
+
+        <div class="col-sm-12" style="text-align:center">
+            <a href="~/school/1" type="button" class="btn btn-primary">Find a Student</a>
+        </div>
+
 </div>
