--- a/SendMe/Content/bootstrap.css
+++ b/SendMe/Content/bootstrap.css
@@ -6515,6 +6515,7 @@ button.close {
   display: block;
   margin-right: auto;
   margin-left: auto;
+  float: none;
 }
 .pull-right {
   float: right !important;
