--- a/SendMe/Views/Account/Login.cshtml
+++ b/SendMe/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="row">
-    <div class="col-md-8">
+    <div class="center-block" style="max-width:410px">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal  about-content", role = "form" }))
             {
