--- a/SendMe/Views/Shared/_Layout.cshtml
+++ b/SendMe/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <script src="https://use.fontawesome.com/eb5762e410.js"></script>
     <script src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeRXmZZlGZELFdxR7815FJirzZDHiZRY4"type="text/javascript"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeRXmZZlGZELFdxR7815FJirzZDHiZRY4" type="text/javascript"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//geodata.solutions/includes/countrystatecity.js"></script>
 
@@ -23,14 +23,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="@Url.Action("Index", "Home")">
-                    <img class="logo-nav" src="~/Img/uscmed-wht-logo.png" />
-                </a>
             </div>
             <div class="navbar-collapse collapse">
+                <a href="@Url.Action("Index", "Home")" class="hidden-md-down">
+                    <img class="logo-nav" src="~/Img/uscmed-wht-logo.png" />
+                </a>
                 <ul class="nav navbar-nav navbar-default">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li><a href="~/school/1">Find a Student</a></li>                    
+                    <li><a href="~/school/1">Find a Student</a></li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
