--- a/SendMe/Views/User/Index.cshtml
+++ b/SendMe/Views/User/Index.cshtml
@@ -46,7 +46,7 @@
                         </ul>
                         <strong>Help @Model.Student.FirstName get the word out!</strong>
                         <br />
-                        <a href="#">sendme.com/send/@Model.User.UserName</a>
+                        <p>sendme.com/send/@Model.User.UserName</p>
                     </div>
                 </div>
             </div>
@@ -170,7 +170,7 @@
                                                                             @Model.ActiveTrip.Trip.Desc
                                                                         </p>
                                                                     </div>
-
+                                                                    <br/><br/>
                                                                     <!-------------MAP------------>
                                                                     <div id="map" style="height: 400px; border: 3px solid #DADEE0;"></div><br />
 
@@ -224,7 +224,7 @@
                                                                                         <button type="button" class="btn btn-fab miniMenu" data-toggle="tooltip" data-placement="left" data-original-title="Donation List" id="viewDonationsBtn">
                                                                                             <i class="material-icons">
                                                                                                 <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                                                                                                    <path fill="#1ABBAC" d="M9,5V9H21V5M9,19H21V15H9M9,14H21V10H9M4,9H8V5H4M4,19H8V15H4M4,14H8V10H4V14Z" />
+                                                                                                    <path fill="#98012e" d="M9,5V9H21V5M9,19H21V15H9M9,14H21V10H9M4,9H8V5H4M4,19H8V15H4M4,14H8V10H4V14Z" />
                                                                                                 </svg>
                                                                                             </i>
                                                                                         </button>
@@ -233,7 +233,7 @@
                                                                                     <a href="#" class="btn btn-fab miniMenu" data-toggle="tooltip" data-placement="left" data-original-title="Add Donation" title="" id="donateBtn">
                                                                                         <i class="material-icons">
                                                                                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                                                                                                <path fill="#1ABBAC" d="M11,4.5H13V15.5H11V4.5M13,17.5V19.5H11V17.5H13Z" />
+                                                                                                <path fill="#98012e" d="M11,4.5H13V15.5H11V4.5M13,17.5V19.5H11V17.5H13Z" />
                                                                                             </svg>
                                                                                         </i>
                                                                                     </a>
@@ -241,7 +241,7 @@
                                                                                     <a href="#" class="btn btn-fab miniMenu" data-toggle="tooltip" data-placement="left" data-original-title="Cancel" title="" id="cancel">
                                                                                         <i class="material-icons">
                                                                                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                                                                                                <path fill="#1ABBAC" d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z" />
+                                                                                                <path fill="#98012e" d="M12,2C17.53,2 22,6.47 22,12C22,17.53 17.53,22 12,22C6.47,22 2,17.53 2,12C2,6.47 6.47,2 12,2M15.59,7L12,10.59L8.41,7L7,8.41L10.59,12L7,15.59L8.41,17L12,13.41L15.59,17L17,15.59L13.41,12L17,8.41L15.59,7Z" />
                                                                                             </svg>
                                                                                         </i>
                                                                                     </a>
@@ -249,7 +249,7 @@
                                                                                     <a href="#" class="btn btn-fab miniMenu" data-toggle="tooltip" data-placement="left" data-original-title="Edit" title="" id="editTripBtn">
                                                                                         <i class="material-icons">
                                                                                             <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                                                                                                <path fill="#1ABBAC" d="M16.84,2.73C16.45,2.73 16.07,2.88 15.77,3.17L13.65,5.29L18.95,10.6L21.07,8.5C21.67,7.89 21.67,6.94 21.07,6.36L17.9,3.17C17.6,2.88 17.22,2.73 16.84,2.73M12.94,6L4.84,14.11L7.4,14.39L7.58,16.68L9.86,16.85L10.15,19.41L18.25,11.3M4.25,15.04L2.5,21.73L9.2,19.94L8.96,17.78L6.65,17.61L6.47,15.29" />
+                                                                                                <path fill="#98012e" d="M16.84,2.73C16.45,2.73 16.07,2.88 15.77,3.17L13.65,5.29L18.95,10.6L21.07,8.5C21.67,7.89 21.67,6.94 21.07,6.36L17.9,3.17C17.6,2.88 17.22,2.73 16.84,2.73M12.94,6L4.84,14.11L7.4,14.39L7.58,16.68L9.86,16.85L10.15,19.41L18.25,11.3M4.25,15.04L2.5,21.73L9.2,19.94L8.96,17.78L6.65,17.61L6.47,15.29" />
                                                                                             </svg>
                                                                                         </i>
                                                                                     </a>
