--- a/SendMe/Views/Shared/_ViewDonationsPartial.cshtml
+++ b/SendMe/Views/Shared/_ViewDonationsPartial.cshtml
@@ -4,14 +4,14 @@
 -------------->
 @if (Model.User.UserName == User.Identity.Name)
 {
-    <div class="container" style="width:inherit">
-        <div class="panel panel-default">
+    <div class="container donations" style="width:inherit">
+        <div class="panel panel-default" id="donationsPanel">
             <div class="panel-heading">
                 <h3>Donations</h3>
-                <button style="width:25%" id="viewDonBackBtn" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Go Back"><i class="glyphicon glyphicon-arrow-left"></i> Back</button>
+                <button style="width:50%" id="viewDonBackBtn" type="button" class="btn btn-danger" data-toggle="tooltip" data-placement="left" title="Go Back"><i class="glyphicon glyphicon-arrow-left"></i> Back</button>
             </div>
             <div class="panel-body">
-                <table class="table table-condensed" style="border-collapse:collapse;">
+                <table class="table table-condensed table-responsive table-striped" style="border-collapse:collapse;">
 
                     <thead>
                         <tr>
@@ -35,7 +35,7 @@
                             <tr>
                                 <td colspan="12" class="hiddenRow">
                                     <div class="accordian-body collapse" id="collapse_@i">
-                                        <table class="table table-striped">
+                                        <table class="table table-striped table-responsive">
                                             <thead>
                                                 <tr><th>Donation Message</th><th>Thank The Donor</th></tr>
                                             </thead>
@@ -73,7 +73,7 @@
                                                                                     <span class="glyphicon glyphicon-send"> Send</span>
                                                                                 </button>
 
-                                                                                <button style="width:25%" type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                                                                                <button style="width:50%" type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                                                                             </div>
                                                                         </form>
                                                                     </div>
@@ -85,7 +85,7 @@
                                                     else
                                                     {
                                                         <td>
-                                                            <p style="width:30%">No need/already thanked</p>
+                                                            <p style="width:30%">N/A</p>
                                                         </td>
                                                     }
                                                 </tr>
@@ -114,9 +114,9 @@
 -------------->
 @if ((User.IsInRole("Admin") && ViewBag.UserSchId == Model.School.Id) && Model.ActiveTrip != null)
 {
-        <div class="donations-card card">
+        <div class="donations-card card donations">
             <div class="card-block">
-                <table class="table table-condensed" style="border-collapse:collapse;">
+                <table class="table table-condensed table-responsive table-striped" style="border-collapse:collapse;">
 
                     <thead>
                         <tr>
