Added search functionality. Working on styling

--- a/SendMe/Content/Site.css
+++ b/SendMe/Content/Site.css
@@ -38,7 +38,10 @@ textarea {
 /*--------------------------------------------------*/
 
 a {
-    color: #fff;
+    color: #730023;
+}
+a:hover {
+    color: #555555;
 }
 
 .wrapper {
@@ -82,10 +85,6 @@ body {
     justify-content: center;
     min-height: 100%;
 }
-
-/*form {
-    width: 480px;
-}*/
 
 .group {
     background: white;
@@ -338,7 +337,12 @@ form .about-content {
     margin-left: 5%;
 }
 
-.contactForm, #regForm, #loginForm {
+#loginForm {
+    max-width: 55%;
+    margin: inherit;
+}
+
+#regForm .contactForm {
     max-width: 90%;
 }
 
@@ -849,6 +853,83 @@ ul.social-icons {
 .navbar-default .navbar-header {
     margin-left: 15px!important;
 }
+
+/*---------------------------
+    Search in NavBar
+---------------------------*/
+.navbar-collapse form[role="search"] {
+		top: 0px;
+		right: 0px;
+		width: 100%;
+		padding: 0px;
+		margin: 0px;
+		z-index: 0;
+        float: left;
+	}
+    
+    .navbar-collapse form[role="search"] button {
+        margin-top: 0;
+        color: #fff;
+        background-color: transparent;
+    }
+
+	.navbar-collapse form[role="search"] button,
+	.navbar-collapse form[role="search"] input {
+		padding: 8px 12px;
+		border-radius: 0px;
+		border-width: 0px;		
+		border-color: rgb(231, 231, 231);
+		box-shadow: none;
+		outline: none;
+	}
+	.navbar-collapse form[role="search"] input {
+		padding: 16px 12px;
+		font-size: 14pt;
+		font-style: italic;
+		color: rgb(160, 160, 160);
+		box-shadow: none;
+	}
+	.navbar-collapse form[role="search"] button[type="reset"] {
+		display: none;
+	}
+
+	@media (min-width: 768px) {
+		.navbar-collapse form[role="search"] {
+			width: 38px;
+		}
+		.navbar-collapse form[role="search"] button,
+		.navbar-collapse form[role="search"] input {
+			padding: 15px 12px;
+		}
+		.navbar-collapse form[role="search"] input {
+			padding: 25px 12px;
+			font-size: 18pt;
+			opacity: 0;
+			display: none;
+		}
+		.navbar-collapse form[role="search"].active {
+			margin-top: 10px;
+		}
+		.navbar-collapse form[role="search"].active button,
+		.navbar-collapse form[role="search"].active input {
+			display: table-cell;
+			opacity: 1;
+		}
+    	.navbar-collapse form[role="search"].active input {
+			width: 100%;
+		}
+	}
+
+/*---------------------------
+    Search from School
+---------------------------*/
+#searchSch button {
+    max-width: 50px;
+    max-height: 35px;
+    margin: 0;
+    border-radius: 0;
+}
+
 
 /*---------------------------
 
