--- a/SendMe/Views/Account/Login.cshtml
+++ b/SendMe/Views/Account/Login.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="row">
-    <div class="center-block" style="max-width:410px">
+    <div class="center-block">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal  about-content", role = "form" }))
             {
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                     <div class="form-group">
-                        <div class="col-md-offset-8 col-md-2">
+                        <div class="col-md-offset-8 col-md-4">
                             <input type="submit" value="Log in" class="btn btn-primary" />
                         </div>
                     </div>
