--- a/SendMe/Views/Shared/_Layout.cshtml
+++ b/SendMe/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
 
                 <form class="navbar-form search" role="search" id="search">
                     <div class="input-group">
-                        <input type="text" class="form-control" style="width: 300px; margin-right: 35px; background-color: #efefef;" placeholder="Search">
+                        <input type="text" class="form-control" style="width: 300px; border-radius:5px" placeholder="Search">
                         <span class="input-group-btn">
                             <button type="reset" class="btn btn-default">
                                 <span class="glyphicon glyphicon-remove">
