Fixed bug that was throwing error if email address had a . before the @

--- a/SendMe/Content/Site.css
+++ b/SendMe/Content/Site.css
@@ -342,8 +342,8 @@ form .about-content {
     margin: inherit;
 }
 
-#regForm .contactForm {
-    max-width: 90%;
+#registration {
+    max-width: 55%;
 }
 
 /*-----------------------
