--- a/SendMe/Views/School/Index.cshtml
+++ b/SendMe/Views/School/Index.cshtml
@@ -62,7 +62,7 @@
                             <div class="card-text">
                                 <h2 class="card-title">
                                     <!--Student Name-->
-                                    <a href="../send/@student.User.UserName" data-toggle="tooltip" data-placement="bottom" data-original-title="View Profile">
+                                    <a href="../../send/@student.User.UserName" data-toggle="tooltip" data-placement="bottom" data-original-title="View Profile">
                                         @student.Student.FirstName @student.Student.LastName
                                     </a>
                                 </h2>
